	  *movsi_zarch, *movhi, *movqi, *mov<mode>_64, *mov<mode>_31,
	  *mov<mode>_64dfp, *mov<mode>_64, *mov<mode>_31, mov<mode>): Remove
	  Q->Q alternative.
	  (Integer->BLKmode splitter): Removed.

2008-12-08  Uros Bizjak  <ubizjak@gmail.com>

	* config/alpha/alpha.c (alpha_set_memflags): Process memory
	references in full insn sequence.

2008-12-09  Jason Merrill  <jason@redhat.com>

	PR c++/38410
	* gimplify.c (gimplify_init_constructor): Don't write out a static
	copy of the CONSTRUCTOR for TREE_ADDRESSABLE types or small sparse
	initializers.

2008-12-09 Tobias Grosser  <grosser@fim.uni-passau.de>

	PR middle-end/38084
	Fix testsuite/gfortran.dg/graphite/id-3.f90.
	* graphite.c (scopdet_basic_block_info): Fix bug that found some
	regions more than once.
	* testsuite/gfortran.dg/graphite/id-3.f90: New.
	* gcc/testsuite/gcc.dg/graphite/pr38084.c: New.

2008-12-09  Ben Elliston  <bje@au.ibm.com>

	* emutls.c (__emutls_get_address): Prototype.
	(__emutls_register_common): Likewise.

	* config/dfp-bit.c (DFP_TO_INT): Remove unnecessary cast.

2008-12-09  Ben Elliston  <bje@au.ibm.com>

	* config/rs6000/darwin-ldouble.c (fmsub): Remove unused variable, v.

2008-12-08  Steve Ellcey  <sje@cup.hp.com>

	* config/ia64/ia64.md (UNSPECV_GOTO_RECEIVER): New constant.
	(nonlocal_goto_receiver): New instruction.

2008-12-08  Jakub Jelinek  <jakub@redhat.com>

	PR c/35443
	* c-pretty-print.c (pp_c_expression): Handle BIND_EXPR.

	PR c/35442
	* c-pretty-print.c (pp_c_cast_expression, pp_c_expression): Handle
	VIEW_CONVERT_EXPR the same as CASE_CONVERT.

2008-12-08  Richard Henderson  <rth@redhat.com>

	PR 38240
	* tree.h (TYPE_MODE): Invoke vector_type_mode when needed.
	(SET_TYPE_MODE): New.
	* c-decl.c (parser_xref_tag): Use it.
	(finish_enum): Likewise.
	* tree.c (build_pointer_type_for_mode): Likewise.
	(build_reference_type_for_mode, build_index_type): Likewise.
	(build_range_type, make_vector_type): Likewise.
	(build_common_tree_nodes_2): Likewise.